fixing height on mobile devices

--- a/src/styles/menu.css
+++ b/src/styles/menu.css
@@ -5,9 +5,10 @@
     flex-grow: 1;
     gap: 2rem;
     padding: 1.3rem;
-    height: 100%;
-    height: calc(100vh - 50px);
-    /* height: 100vh; */
+    /* height: 100%;
+    height: calc(100vh - 50px); */
+    height: calc(100vh - env(safe-area-inset-bottom));
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
 .menu-top {
